[package]
name = "refine"
version = "0.1.0"
authors = ["Francesco Bianco <bianco@javanile.org>"]
edition = "2018"

[[bin]]
name = "refine"
path = "src/main.rs"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
clap = { version = "3.2", features = [ "derive" ]}
lalrpop-util = "0.19"
regex = "1"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.15.0"
